Setting hopper as default for native kernels. Need to fix by building for all arch and then have default register ops select arch-specific .cubin dynamically at init time...

--- a/backends/nvidia/src/ops/Makefile
+++ b/backends/nvidia/src/ops/Makefile
@@ -27,7 +27,7 @@ NVCC_FLAGS = ${PROF_NVCC_FLAGS}
 
 ## just for now only build for speciic, arch but in reality we can generate
 ## many cubins (or ptx) and then dynamically select...
-NATIVE_OP_CUDA_ARCH_NUM = 86
+NATIVE_OP_CUDA_ARCH_NUM = 90a
 
 NATIVE_OP_KERNELS_PTX = ${NATIVE_OP_PATH}/build/cuda_kernels.ptx
 NATIVE_OP_KERNELS_CUBIN = cuda_kernels.cubin
