Sequence batch prep seems to be ready now for embedding testing...! Need to handle the Transformer_Block_Transitions as well though...

--- a/libdataflowmodels/src/dataflow_models/transformer/Makefile
+++ b/libdataflowmodels/src/dataflow_models/transformer/Makefile
@@ -1,6 +1,8 @@
 CC = gcc
 CFLAGS = -g -fPIC
 
+CUDA_INCLUDE_DIR = /usr/local/cuda/include
+
 DATAFLOW_LIB_INCLUDE_DIR = ../../../../libdataflow/include
 DATAFLOW_LIB_DIR = ${CURDIR}/../../../../libdataflow/lib
 DATAFLOW_LIB = -ldataflow
@@ -14,7 +16,7 @@ CUDA_DATAFLOW_BACKEND_LIB_DIR = ${CURDIR}/../../../../backends/nvidia/lib
 CUDA_DATAFLOW_BACKEND_LIBS = -lcuda_dataflow_handle -lcuda_register_default_ops
 
 DATAFLOW_MODELS_INCLUDE_DIR = ../../../include
-ALL_INCLUDES = -I${DATAFLOW_LIB_INCLUDE_DIR} -I${CUDA_DATAFLOW_BACKEND_INCLUDE_DIR} -I${DATAFLOW_OP_INCLUDE_DIR} -I${DATAFLOW_MODELS_INCLUDE_DIR}
+ALL_INCLUDES = -I${DATAFLOW_LIB_INCLUDE_DIR} -I${CUDA_DATAFLOW_BACKEND_INCLUDE_DIR} -I${DATAFLOW_OP_INCLUDE_DIR} -I${DATAFLOW_MODELS_INCLUDE_DIR} -I${CUDA_INCLUDE_DIR}
 
 ALL_LIBS =  -lm -ldl -pthread -L${DATAFLOW_LIB_DIR} -L${CUDA_DATAFLOW_BACKEND_LIB_DIR} -L${DATAFLOW_OP_LIB_DIR} ${DATAFLOW_LIB} ${CUDA_DATAFLOW_BACKEND_LIBS} ${DATAFLOW_OP_LIB} -Wl,-rpath,${DATAFLOW_LIB_DIR} -Wl,-rpath,${CUDA_DATAFLOW_BACKEND_LIB_DIR} -Wl,-rpath,${DATAFLOW_OP_LIB_DIR}
 
