Full forward pass is working correctly. Now need to confirm correctness for full bwd pass! After this will work on scaffolding for saving activations/cycling weights/peer transfers...

--- a/test/dataflow_models/Makefile
+++ b/test/dataflow_models/Makefile
@@ -24,7 +24,7 @@ DATAFLOW_MODELS_LIB = -ldataflowmodels
 ALL_INCLUDES = -I${DATAFLOW_LIB_INCLUDE_DIR} -I${CUDA_DATAFLOW_BACKEND_INCLUDE_DIR} -I${CUDA_INCLUDE_DIR} -I${DATAFLOW_OPS_INCLUDE_DIR} -I${DATAFLOW_MODELS_INCLUDE_DIR}
 ALL_LIBS = -L${DATAFLOW_LIB_DIR} -L${CUDA_DATAFLOW_BACKEND_LIB_DIR} -L${DATAFLOW_OPS_LIB_DIR} -L${DATAFLOW_MODELS_LIB_DIR} ${DATAFLOW_LIB} ${CUDA_DATAFLOW_BACKEND_LIBS} ${DATAFLOW_OPS_LIB} ${DATAFLOW_MODELS_LIB} -Wl,-rpath,${DATAFLOW_LIB_DIR} -Wl,-rpath,${CUDA_DATAFLOW_BACKEND_LIB_DIR} -Wl,-rpath,${DATAFLOW_OPS_LIB_DIR} -Wl,-rpath,${DATAFLOW_MODELS_LIB_DIR}
 
-EXECS = test_transformer
+EXECS = test_transformer_full_fwd
 
 all: create_data_dirs ${EXECS}
 
@@ -42,7 +42,7 @@ create_data_dirs:
 	mkdir -p correct_transformer_data/head_bwd;
 
 
-test_transformer: test_transformer.c
+test_transformer_full_fwd: test_transformer_full_fwd.c
 	${CC} ${CFLAGS} ${ALL_INCLUDES} $^ -o $@ ${ALL_LIBS}
 
 clean:
