Transformer with bidirectional dataflow appears to be fully workingls Now need to add the grad accum and optimizer functions :)

--- a/test/dataflow_models/Makefile
+++ b/test/dataflow_models/Makefile
@@ -24,7 +24,7 @@ DATAFLOW_MODELS_LIB = -ldataflowmodels
 ALL_INCLUDES = -I${DATAFLOW_LIB_INCLUDE_DIR} -I${CUDA_DATAFLOW_BACKEND_INCLUDE_DIR} -I${CUDA_INCLUDE_DIR} -I${DATAFLOW_OPS_INCLUDE_DIR} -I${DATAFLOW_MODELS_INCLUDE_DIR}
 ALL_LIBS = -L${DATAFLOW_LIB_DIR} -L${CUDA_DATAFLOW_BACKEND_LIB_DIR} -L${DATAFLOW_OPS_LIB_DIR} -L${DATAFLOW_MODELS_LIB_DIR} ${DATAFLOW_LIB} ${CUDA_DATAFLOW_BACKEND_LIBS} ${DATAFLOW_OPS_LIB} ${DATAFLOW_MODELS_LIB} -Wl,-rpath,${DATAFLOW_LIB_DIR} -Wl,-rpath,${CUDA_DATAFLOW_BACKEND_LIB_DIR} -Wl,-rpath,${DATAFLOW_OPS_LIB_DIR} -Wl,-rpath,${DATAFLOW_MODELS_LIB_DIR}
 
-EXECS = naive_transformer
+EXECS = naive_transformer transformer
 
 all: create_data_dirs ${EXECS}
 
@@ -51,6 +51,10 @@ create_data_dirs:
 	mkdir -p profiling
 
 naive_transformer: naive_transformer.c
+	${CC} ${CFLAGS} ${ALL_INCLUDES} $^ -o $@ ${ALL_LIBS}
+
+
+transformer: transformer.c
 	${CC} ${CFLAGS} ${ALL_INCLUDES} $^ -o $@ ${ALL_LIBS}
 
 clean:
