Reorganizing host op submission with op-specific arg datastructures for simplicity -- want to make sure the arguments are correct even when function doing submission exits...

--- a/libdataflowops/Makefile
+++ b/libdataflowops/Makefile
@@ -2,10 +2,11 @@ CC = gcc
 CFLAGS = -fPIC -g -std=c99
 
 DATAFLOW_LIB_INCLUDE_DIR = ../libdataflow/include
+HOST_OPS_INCLUDE_DIR = ../backends/host/include
 
 SELF_INCLUDE_DIR = include
 
-ALL_INCLUDE_DIRS = -I${DATAFLOW_LIB_INCLUDE_DIR} -I${SELF_INCLUDE_DIR}
+ALL_INCLUDE_DIRS = -I${DATAFLOW_LIB_INCLUDE_DIR} -I${HOST_OPS_INCLUDE_DIR} -I${SELF_INCLUDE_DIR}
 
 DATAFLOW_SET_OPS_OBJS = objs/set_op_skeletons.o
 
