Putting host op structs within dataflow_ops header for import convenience

--- a/backends/host/Makefile
+++ b/backends/host/Makefile
@@ -5,10 +5,11 @@ BUILD_CFLAGS = -O3 -fPIC
 CFLAGS = ${DEV_CFLAGS}
 
 DATAFLOW_INCLUDE_DIR = ${CURDIR}/../../libdataflow/include
+DATAFLOW_OPS_INCLUDE_DIR = ${CURDIR}/../../libdataflowops/include
 
 HOST_OPS_INCLUDE_DIR = ${CURDIR}/include
 
-ALL_INCLUDES = -I ${DATAFLOW_INCLUDE_DIR} -I ${HOST_OPS_INCLUDE_DIR}
+ALL_INCLUDES = -I ${DATAFLOW_INCLUDE_DIR} -I ${DATAFLOW_OPS_INCLUDE_DIR} -I ${HOST_OPS_INCLUDE_DIR}
 
 ALL_LIB_DEPENDS = -pthread -lm -lnuma
 
