--- a/backends/host/Makefile
+++ b/backends/host/Makefile
@@ -17,19 +17,20 @@ HOST_OPS_SRC_DIR = src/ops
 
 HOST_OPS_OBJ_DIR = ${HOST_OPS_SRC_DIR}/objs
 
+LOSS_SRC_DIR = ${HOST_OPS_SRC_DIR}/loss
 MEMORY_SRC_DIR = ${HOST_OPS_SRC_DIR}/memory
 ADD_SRC_DIR = ${HOST_OPS_SRC_DIR}/add
 OPTIMIZER_SRC_DIR = ${HOST_OPS_SRC_DIR}/optimizer
 
-
+LOSS_OBJS = ${HOST_OPS_OBJ_DIR}/print_loss.o
 MEMORY_OBJS = ${HOST_OPS_OBJ_DIR}/set_mem.o
-ADD_OBJS = ${HOST_OPS_OBJ_DIR}/add_dispatch.o ${HOST_OPS_OBJ_DIR}/add.o ${HOST_OPS_OBJ_DIR}/add_avx512.o
-OPTIMIZER_OBJS = ${HOST_OPS_OBJ_DIR}/adam_dispatch.o ${HOST_OPS_OBJ_DIR}/adam_step.o ${HOST_OPS_OBJ_DIR}/adam_step_avx512.o
+ADD_OBJS = ${HOST_OPS_OBJ_DIR}/add_dispatch.o ${HOST_OPS_OBJ_DIR}/add.o ${HOST_OPS_OBJ_DIR}/add_avx2.o ${HOST_OPS_OBJ_DIR}/add_avx512.o
+OPTIMIZER_OBJS = ${HOST_OPS_OBJ_DIR}/adam_dispatch.o ${HOST_OPS_OBJ_DIR}/adam_step.o ${HOST_OPS_OBJ_DIR}/adam_step_avx2.o ${HOST_OPS_OBJ_DIR}/adam_step_avx512.o
 
-HOST_OPS_OBJS = ${MEMORY_OBJS} ${ADD_OBJS} ${OPTIMIZER_OBJS}
-
+HOST_OPS_OBJS = ${LOSS_OBJS} ${MEMORY_OBJS} ${ADD_OBJS} ${OPTIMIZER_OBJS} 
 HOST_OPS_LIB = lib/libdataflow_hostops.so
 
+AVX2_FLAGS = -mavx2 -mfma -mf16c
 AVX512_FLAGS = -mavx512f -mavx512vl -mavx512bw -mavx512dq -mavx512bf16 -mavx512fp16
 
 all: create_dirs ${HOST_OPS_LIB}
@@ -43,9 +44,20 @@ ${HOST_OPS_LIB}: ${HOST_OPS_OBJS}
 	${CC} ${CFLAGS} -shared ${ALL_INCLUDES} $^ -o $@ ${ALL_LIB_DEPENDS}
 
 
+
+## loss related ops
+${HOST_OPS_OBJ_DIR}/print_loss.o: ${LOSS_SRC_DIR}/print_loss.c
+	${CC} ${CFLAGS} ${ALL_INCLUDES} -c $< -o $@
+
+
+
+
 ## memory related ops
 ${HOST_OPS_OBJ_DIR}/set_mem.o: ${MEMORY_SRC_DIR}/set_mem.c
 	${CC} ${CFLAGS} ${ALL_INCLUDES} -c $< -o $@
+
+
+
 
 ## add related ops
 ${HOST_OPS_OBJ_DIR}/add_dispatch.o: ${ADD_SRC_DIR}/add_dispatch.c
@@ -54,8 +66,14 @@ ${HOST_OPS_OBJ_DIR}/add_dispatch.o: ${ADD_SRC_DIR}/add_dispatch.c
 ${HOST_OPS_OBJ_DIR}/add.o: ${ADD_SRC_DIR}/add.c
 	${CC} ${CFLAGS} ${ALL_INCLUDES} -c $< -o $@
 
+${HOST_OPS_OBJ_DIR}/add_avx2.o: ${ADD_SRC_DIR}/add_avx2.c
+	${CC} ${CFLAGS} ${AVX2_FLAGS} ${ALL_INCLUDES} -c $< -o $@
+
 ${HOST_OPS_OBJ_DIR}/add_avx512.o: ${ADD_SRC_DIR}/add_avx512.c
 	${CC} ${CFLAGS} ${AVX512_FLAGS} ${ALL_INCLUDES} -c $< -o $@
+
+
+
 
 ## optimizer ops
 
@@ -67,9 +85,15 @@ ${HOST_OPS_OBJ_DIR}/adam_dispatch.o: ${OPTIMIZER_SRC_DIR}/adam_dispatch.c
 ${HOST_OPS_OBJ_DIR}/adam_step.o: ${OPTIMIZER_SRC_DIR}/adam_step.c
 	${CC} ${CFLAGS} ${ALL_INCLUDES} -c $< -o $@
 
+${HOST_OPS_OBJ_DIR}/adam_step_avx2.o: ${OPTIMIZER_SRC_DIR}/adam_step_avx2.c
+	${CC} ${CFLAGS} ${AVX2_FLAGS} ${ALL_INCLUDES} -c $< -o $@
+
 ## main avx512 implementations
 ${HOST_OPS_OBJ_DIR}/adam_step_avx512.o: ${OPTIMIZER_SRC_DIR}/adam_step_avx512.c
 	${CC} ${CFLAGS} ${AVX512_FLAGS} ${ALL_INCLUDES} -c $< -o $@
+
+
+
 
 clean:
 	rm -rf ${HOST_OPS_OBJ_DIR}/*.o ${HOST_OPS_LIB}
